# PROTEA

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RERANKER.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini  seed.sh
.github/workflows/: docker.yml  docs.yml  integration.yml  lint.yml  test.yml
alembic/: env.py
alembic/versions/: 110a5b8cfbb9_add_reranker_model_id_to_evaluation_.py  1f0ac8aa38a4_add_evaluation_set.py  3505bfa74df6_add_aspect_to_reranker_model_and_.py  350d9f18ca10_fix_evidence_code_varchar_length.py  3884c47fe946_add_reranker_feature_columns_to_go_.py  47de89cf6fec_add_evaluation_result.py  489835ed5b31_add_composite_index_pga_set_accession.py  4f38043a5e41_add_parent_job_id.py  513355a1d933_add_scoring_config_id_to_evaluation_.py  54e758c210c8_add_ia_url_to_ontology_snapshot.py  5fc2eb0f986d_add_composite_indexes_for_knn.py  7737a352d4fe_merge_scoring_config_branch.py  7c19ca08d5d4_add_support_entry_table.py  91ef6ec08b11_add_annotation_tables.py  a1b2c3d4e5f6_add_esm3c_chunking_normalize_residues.py  (+10 more)
docs/: quality_baseline.md  requirements.txt
scripts/: deploy_vast.sh  evaluate_external_tool.py  expose.sh  init_db.py  manage.sh  query_eval_results.py  queue_evals_when_ready.py  run_experiments.py  run_one_job.py  setup_vast.sh  start_dev.sh  stop_dev.sh  sync_db_vast.sh  worker.py
tests/: conftest.py  test_admin_router.py  test_annotate_router.py  test_annotations_router.py  test_api.py  test_api_annotations.py  test_api_query_sets.py  test_base_worker.py  test_compute_embeddings.py  test_core.py  test_embeddings_router.py  test_evaluation.py  test_feature_engineering.py  test_fetch_uniprot_metadata.py  test_generate_evaluation_set.py  test_infrastructure.py  test_insert_proteins.py  test_integration.py  test_jobs_pg.py  test_load_goa_annotations.py  test_load_ontology_snapshot.py  test_load_quickgo_annotations.py  test_logging.py  test_metrics.py  test_predict_go_terms.py  test_proteins_router.py  test_queue.py  test_real_models.py  test_reranker.py  test_run_cafa_evaluation.py  test_scoring.py  test_scoring_router.py  test_settings.py  test_showcase_router.py  test_support_maintenance_routers.py  test_train_reranker.py
(+160 files in other folders)
