[project]
name = "protea"
version = "0.1.0"
description = ""
authors = [
    {name = "frapercan",email = "frapercan1@alum.us.es"}
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "alembic (>=1.18.4,<2.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "psycopg[binary] (>=3.3.3,<4.0.0)",
    "fastapi (>=0.135.1,<0.136.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pika (>=1.3.0,<2.0.0)",
    "pgvector (>=0.4.2,<1.0.0)",
    "numpy (>=1.26.0,<3.0.0)",
    "transformers (>=4.40.0,<5.0.0)",
    "torch (>=2.0.0)",
    "sentencepiece (>=0.2.1,<0.3.0)",
    "esm (>=3.2.1)",
    "python-multipart (>=0.0.22,<0.0.23)",
    "faiss-cpu (>=1.7.0)",
    "parasail (>=1.3.4)",
    "ete3 (>=3.1.3)",
    "cafaeval @ git+https://github.com/claradepaolis/CAFA-evaluator-PK.git",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.2,<10.0.0"
uvicorn = ">=0.41.0,<0.42.0"
coverage = {extras = ["toml"], version = ">=7.2.1"}
flake8 = ">=6.0.0"
flake8-bugbear = ">=23.2.13"
taskipy = ">=1.10.3"
sphinx = ">=7.2.6"
furo = ">=2024.8.6"
sphinx-copybutton = ">=0.5.2"
sphinx-design = ">=0.6.1"
shibuya = ">=2025.9.24"
httpx = ">=0.28.1,<0.29.0"
ruff = ">=0.15.5,<0.16.0"
mypy = ">=1.19.1,<2.0.0"
pytest-cov = ">=7.0.0,<8.0.0"

[tool.taskipy.tasks]
lint     = "ruff check protea scripts && flake8 protea"
format   = "ruff format protea scripts"
typecheck = "mypy protea"
coverage = "coverage run -m pytest tests && coverage report -m"
html_docs = "make html -C docs"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
disallow_untyped_defs = false
warn_return_any = false
warn_unused_ignores = false
[[tool.mypy.overrides]]
module = [
    "protea.core.operations.*",
    "protea.api.routers.*",
]
ignore_errors = true

[tool.coverage.run]
source = ["protea"]
omit = ["*/site-packages/*"]

[tool.coverage.report]
fail_under = 70
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "pass",
]
